# docs/swagger.json
@@ -24,6 +24,9 @@
                 "consumes": [
                     "application/json"
                 ],
+                "tags": [
+                    "graph"
+                ],
                 "summary": "graph-namespace",
                 "operationId": "GetNamespaces",
                 "parameters": [
@@ -75,6 +78,9 @@
                 "description": "通过node来查询流量视图",
                 "consumes": [
                     "application/json"
+                ],
+                "tags": [
+                    "graph"
                 ],
                 "summary": "graph-Node",
                 "operationId": "GetNode",
